compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_multiple_errors_invalid_annotation_and_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1462
expression: "const invalid_everything: MyInvalidType = MyInvalidValue\nconst mismatched_types: String = 7"
---
----- SOURCE CODE
const invalid_everything: MyInvalidType = MyInvalidValue
const mismatched_types: String = 7

----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:1:27
  │
1 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.rakun:1:43
  │
1 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                                           ^^^^^^^^^^^^^^

The name `MyInvalidValue` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.rakun:2:34
  │
2 │ const mismatched_types: String = 7
  │                                  ^

Expected type:

    String

Found type:

    Int
