compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_string_concat_invalid_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nconst some_int = 5\nconst invalid_concat = some_int ++ \"with_string\"\n"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:3:24
  │
3 │ const invalid_concat = some_int ++ "with_string"
  │                        ^^^^^^^^

The ++ operator expects arguments of this type:

    String

But this argument has this type:

    Int
