compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_alias_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type X = Int type X = Int
---
----- SOURCE CODE
type X = Int type X = Int

----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ type X = Int type X = Int
  │ ^^^^^^^^^^^^ ^^^^^^^^^^^^ Redefined here
  │ │             
  │ First defined here

The type `X` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
