compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_const_and_function_names_const_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const duplicate = 1\nfn duplicate() { 2 }"
---
----- SOURCE CODE
const duplicate = 1
fn duplicate() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ const duplicate = 1
  │ ^^^^^^^^^^^^^^^ First defined here
2 │ fn duplicate() { 2 }
  │ ^^^^^^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
